--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -23,11 +23,10 @@ body {
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb)); */ 
-}
-
-h1{
-color: aqua;
-font-weight: bold;
-  
+    rgb(var(--background-start-rgb)); */
+/* }
+/*  */
+h1 {
+  font-weight: bold;
+  font-size: 50px;
 }
