--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,7 @@ body {
 /*  */
 h1 {
   font-weight: bold;
-  font-size: 50px;
+  font-size: 45px;
 }
 
 h2 {
@@ -36,7 +36,7 @@ h2 {
   font-size: 38px;
 }
 
-
-body {
-  background-color: #eff8fa;
+#body {
+  /* background-color: #eff8fa; */
+  padding: 0 40px;
 }
