--- a/src/app/travellers/chat/messenger.css
+++ b/src/app/travellers/chat/messenger.css
@@ -29,6 +29,7 @@
   height: 100%;
   overflow-y: scroll;
   padding-right: 10px;
+  background-color:#F0F0F0 ;
 }
 
 .chatBoxBottom {
@@ -63,6 +64,7 @@
 .chatProfileWrapper {
   padding: 10px;
   height: 100%;
+  /* background-color: #F0F0F0; */
 }
 
 .noConversationText {
